[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Game_Logic/Revivable/Revivable.gd" type="Script" id=1]

[node name="Destroyable" type="Node" groups=[
"Destroyable",
"Revivable",
"Serializable",
]]
script = ExtResource( 1 )

[node name="Regen_Timer" type="Timer" parent="."]

[node name="Bleedout_Timer" type="Timer" parent="."]
one_shot = true

[node name="Regen_Delayed_Timer" type="Timer" parent="."]

[node name="Revive_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Regen_Timer" to="." method="_on_Regen_Timer_timeout"]
[connection signal="timeout" from="Bleedout_Timer" to="." method="_on_Bleedout_Timer_timeout"]
[connection signal="timeout" from="Regen_Delayed_Timer" to="." method="_on_Regen_Delayed_Timer_timeout"]
[connection signal="timeout" from="Revive_Timer" to="." method="_on_Revive_Timer_timeout"]
